--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Attributes\AuthorizeOrderAccessAttribute.cs" />
     <Compile Include="Attributes\AuthorizeRequesterInOrderWorkgroupAttribute.cs" />
     <Compile Include="Attributes\AuthorizeWorkgroupAccessAttribute.cs" />
+    <Compile Include="Attributes\VersionAttribute.cs" />
     <Compile Include="AutomapperConfig.asax.cs" />
     <Compile Include="CassetteConfiguration.cs" />
     <Compile Include="ComponentRegistrar.asax.cs" />
