updated web.config to send elmah errors to admin email address.

--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -37,7 +37,7 @@
   </syscache>
   <elmah>
     <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="RATBERT" applicationName="Purchasing" />
-    <errorMail from="automatedemail@caes.ucdavis.edu" to="srkirkland@ucdavis.edu; anlai@ucdavis.edu" subject="ELMAH: Purchasing web error response" smtpServer="smtp.ucdavis.edu" />
+    <errorMail from="automatedemail@caes.ucdavis.edu" to="opp-admins@ucdavis.edu" subject="ELMAH: Purchasing web error response" smtpServer="smtp.ucdavis.edu" />
   </elmah>
   <connectionStrings>
     <add name="MainDB" connectionString="data source=vogel;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
