order complete now tracks errors and sends to ELMAH. The user gets a friendly error message and is told to try again later

--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -84,6 +84,7 @@
       </namespaces>
     </pages>
     <!--<httpRuntime maxRequestLength="10240"/> --><!--set max upload size to 10MB-->
+    <!--<httpModules><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" /></httpModules>--><!--Only if we want to log errors in local dev-->
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
