--- a/Purchasing.Web/Web.Release.config
+++ b/Purchasing.Web/Web.Release.config
@@ -14,6 +14,12 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <!--Add analytics key for GA--> 
+  <appSettings>
+    <add key="AnalyticsKey" value="UA-5512876-10" xdt:Transform="Replace"/>
+  </appSettings>
+  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
