--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -542,6 +542,7 @@
     <Content Include="Scripts\public\order\OrderEdit.js" />
     <Content Include="Scripts\public\order\OrderLocalStorage.js" />
     <Content Include="Scripts\public\single\fileuploader.js" />
+    <Content Include="Scripts\public\single\RearrangeDataTable.js" />
     <Content Include="Scripts\public\single\TableTools.js" />
     <Content Include="Scripts\public\single\ZeroClipboard.js" />
     <Content Include="Scripts\qunit.js" />
