updated elmah to use the main DB connection, also updated transforms

--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -36,12 +36,11 @@
     <cache region="ShortTerm" expiration="3600" priority="3" />
   </syscache>
   <elmah>
-    <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="RATBERT" applicationName="Purchasing" />
+    <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="MainDB" applicationName="Purchasing" />
     <errorMail from="automatedemail@caes.ucdavis.edu" to="opp-admins@ucdavis.edu" subject="ELMAH: Purchasing web error response" smtpServer="smtp.ucdavis.edu" />
   </elmah>
   <connectionStrings>
     <add name="MainDB" connectionString="data source=vogel;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
-    <add name="RATBERT" connectionString="data source=.\SQLEXPRESS;Initial Catalog=Ratbert;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings file="AppSettings.config">
     <add key="webpages:Version" value="1.0.0.0" />
