Added remote view access to elmah error page

--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -36,6 +36,7 @@
     <cache region="ShortTerm" expiration="3600" priority="3" />
   </syscache>
   <elmah>
+    <security allowRemoteAccess="1" />
     <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="MainDB" applicationName="Purchasing" />
     <errorMail from="automatedemail@caes.ucdavis.edu" to="opp-admins@ucdavis.edu" subject="ELMAH: Purchasing web error response" smtpServer="smtp.ucdavis.edu" />
   </elmah>
@@ -87,9 +88,6 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    <handlers>
-      <!--<add verb="POST,GET,HEAD" path="Administration/Errors.axd" type="Elmah.ErrorLogPageFactory, Elmah"/>-->
-    </handlers>
     <modules runAllManagedModulesForAllRequests="true">
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
@@ -112,6 +110,25 @@
       <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="30.00:00:00" />
     </staticContent>
   </system.webServer>
+  <location path="elmah.axd">
+    <system.web>
+      <httpHandlers>
+        <add verb="POST,GET,HEAD" path="elmah.axd"
+          type="Elmah.ErrorLogPageFactory, Elmah" />
+      </httpHandlers>
+      <authorization>
+        <allow users="postit,anlai" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+    <system.webServer>
+      <handlers>
+        <add name="Elmah" path="elmah.axd" verb="POST,GET,HEAD"
+          type="Elmah.ErrorLogPageFactory, Elmah"
+          preCondition="integratedMode" />
+      </handlers>
+    </system.webServer>
+  </location>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
