--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -83,8 +83,10 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <!--<httpRuntime maxRequestLength="10240"/> --><!--set max upload size to 10MB-->
-    <!--<httpModules><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" /></httpModules>--><!--Only if we want to log errors in local dev-->
+    <!--<httpRuntime maxRequestLength="10240"/> -->
+    <!--set max upload size to 10MB-->
+    <!--<httpModules><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" /></httpModules>-->
+    <!--Only if we want to log errors in local dev-->
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -113,8 +115,7 @@
   <location path="elmah.axd">
     <system.web>
       <httpHandlers>
-        <add verb="POST,GET,HEAD" path="elmah.axd"
-          type="Elmah.ErrorLogPageFactory, Elmah" />
+        <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
       </httpHandlers>
       <authorization>
         <allow users="postit,anlai" />
@@ -123,9 +124,7 @@
     </system.web>
     <system.webServer>
       <handlers>
-        <add name="Elmah" path="elmah.axd" verb="POST,GET,HEAD"
-          type="Elmah.ErrorLogPageFactory, Elmah"
-          preCondition="integratedMode" />
+        <add name="Elmah" path="elmah.axd" verb="POST,GET,HEAD" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
       </handlers>
     </system.webServer>
   </location>
@@ -137,11 +136,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.7.0" newVersion="4.0.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.8.0" newVersion="4.0.8.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="AjaxMin" publicKeyToken="21ef50ce11b5d80f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.46.4422.26284" newVersion="4.46.4422.26284" />
+        <bindingRedirect oldVersion="0.0.0.0-4.47.4452.34008" newVersion="4.47.4452.34008" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
