--- a/Purchasing.Web/packages.config
+++ b/Purchasing.Web/packages.config
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AjaxMin" version="4.46.4422.26284" />
+  <package id="AjaxMin" version="4.47.4452.34008" />
   <package id="CaesDesignBoilerplate" version="3.1.0.29" />
-  <package id="Cassette" version="1.0.1" />
-  <package id="Cassette.Views" version="1.0.1" />
-  <package id="Cassette.Web" version="1.0.1" />
+  <package id="Cassette" version="1.2.0" />
+  <package id="Cassette.Views" version="1.2.0" />
+  <package id="Cassette.Web" version="1.2.0" />
+  <package id="CommonServiceLocator" version="1.0" />
   <package id="Dapper" version="1.8" />
-  <package id="DataAnnotationsExtensions" version="1.0.1" />
-  <package id="DataAnnotationsExtensions.MVC3" version="1.0.1" />
+  <package id="DataAnnotationsExtensions" version="1.0.2.0" />
+  <package id="DataAnnotationsExtensions.MVC3" version="1.0.2.0" />
   <package id="EntityFramework" version="4.1.10331.0" />
+  <package id="IronRuby" version="1.1.3" />
   <package id="jQuery" version="1.7.1" />
   <package id="jquery.datatables" version="1.9.0" />
   <package id="jQuery.UI.Combined" version="1.8.17" />
@@ -17,8 +19,10 @@
   <package id="Jurassic" version="2.1.1" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="MiniProfiler" version="1.9" />
-  <package id="Modernizr" version="2.0.6" />
-  <package id="Newtonsoft.Json" version="4.0.7" />
+  <package id="Modernizr" version="2.5.3" />
+  <package id="Newtonsoft.Json" version="4.0.8" />
+  <package id="SassAndCoffee.Core" version="2.0.2.0" />
+  <package id="SassAndCoffee.Ruby" version="2.0.2.0" />
   <package id="UcdArchDlls" version="3.1.0.61" />
   <package id="UcdArchMvcTemplates" version="1.0.0.17" />
   <package id="WebActivator" version="1.5" />
