--- a/.nuget/NuGet.targets
+++ b/.nuget/NuGet.targets
@@ -9,7 +9,7 @@
         <PackageOutputDir Condition="$(PackageOutputDir) == ''">$(TargetDir.Trim('\\'))</PackageOutputDir>
 
         <!-- Package sources used to restore packages. By default will used the registered sources under %APPDATA%\NuGet\NuGet.Config -->
-        <PackageSources>""</PackageSources>
+        <PackageSources>"http://nugetserver.caes.ucdavis.edu/FeedService.svc/";"http://go.microsoft.com/fwlink/?LinkID=206669"</PackageSources>
 
         <!-- Enable the restore command to run before builds -->
         <RestorePackages Condition="$(RestorePackages) == ''">false</RestorePackages>
