--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -131,7 +131,9 @@
     <Compile Include="Queries\SearchResults.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
