admins and users method of listSync controller info list membership

--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Controllers\AutoApprovalController.cs" />
     <Compile Include="Controllers\CustomFieldController.cs" />
     <Compile Include="Controllers\Dev\FinancialApiController.cs" />
+    <Compile Include="Controllers\ListSyncController.cs" />
     <Compile Include="Controllers\HelpController.cs" />
     <Compile Include="Controllers\HistoryController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
