--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -49,6 +49,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="LDAPUser" value="[External]" />
     <add key="LDAPPassword" value="[External]" />
+    <add key="userlistpassword" value="D37vak2paCHACUnureChabaNUtraThaS"/><!--We can change this out for production-->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
