error messages should send to opp-tech, not opp-admin

--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -38,7 +38,7 @@
   <elmah>
     <security allowRemoteAccess="1" />
     <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="MainDB" applicationName="Purchasing" />
-    <errorMail from="automatedemail@caes.ucdavis.edu" to="opp-admins@ucdavis.edu" subject="ELMAH: Purchasing web error response" smtpServer="smtp.ucdavis.edu" />
+    <errorMail from="automatedemail@caes.ucdavis.edu" to="opp-tech@ucdavis.edu" subject="ELMAH: Purchasing web error response" smtpServer="smtp.ucdavis.edu" />
   </elmah>
   <connectionStrings>
     <add name="MainDB" connectionString="data source=vogel;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
