user list now only shows distinct emails, appsettings configured

--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -49,6 +49,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="LDAPUser" value="[External]" />
     <add key="LDAPPassword" value="[External]" />
+    <add key="userlistpassword" value="[External]" />
+    <add key="uservoiceKey" value="[External]" />
+    <add key="uservoiceSecret" value="[External]" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
