added the ipfilter key to the appsettings, but it's only stored in the one stored on the server

--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -52,6 +52,7 @@
     <add key="userlistpassword" value="[External]" />
     <add key="uservoiceKey" value="[External]" />
     <add key="uservoiceSecret" value="[External]" />
+    <add key="IpFilter" value="[External]"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
