--- a/Purchasing.Web/Web.Test.config
+++ b/Purchasing.Web/Web.Test.config
@@ -7,7 +7,12 @@
   <connectionStrings xdt:Transform="Replace">
     <add name="MainDB" connectionString="data source=terry;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  
+
+  <!--Add analytics key for GA-->
+  <appSettings>
+    <add key="AnalyticsKey" value="UA-5512876-11" xdt:Transform="Replace"/>
+  </appSettings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
