--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Domain\Account.cs" />
     <Compile Include="Domain\Approval.cs" />
     <Compile Include="Domain\Building.cs" />
+    <Compile Include="Domain\OrderRequestSave.cs" />
     <Compile Include="Domain\ServiceMessage.cs" />
     <Compile Include="Helpers\ApprovalEqualityComparer.cs" />
     <Compile Include="Domain\Attachment.cs" />
