tweaking the orderpeeps view and wrote the class and added to the queryrepositoryfacory

--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Queries\CommentHistory.cs" />
     <Compile Include="Queries\OpenOrderByUser.cs" />
     <Compile Include="Queries\OrderHistoryBase.cs" />
+    <Compile Include="Queries\OrderPeep.cs" />
     <Compile Include="Queries\OrderTrackingHistory.cs" />
     <Compile Include="Queries\OrganizationDescendant.cs" />
     <Compile Include="Queries\PendingOrder.cs" />
