--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -836,6 +836,7 @@
     <Content Include="Views\Order\_PeepsDialog.cshtml" />
     <Content Include="Views\Order\SavedOrderRequests.cshtml" />
     <Content Include="Views\Order\_OrderSaveDialog.cshtml" />
+    <Content Include="Views\Order\_ReceivedItemsHistoryDialog.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
