added gitignore to ignore sandbox in db project

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ AppSettings.config
 Purchasing.Core/bin/Test/*.dll
 Purchasing.WS/bin/Test/*.dll
 Purchasing.WS/bin/Test/Purchasing.WS.dll.config
+Purchasing.Db/sandbox/*
