--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -725,15 +725,15 @@
     <Content Include="Views\Workgroup\EditAccount.cshtml" />
     <Content Include="Views\Workgroup\_AccountForm.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\User.cshtml" />
-    <Content Include="Views\Order\Index.cshtml" />
+    <Content Include="Views\History\Index.cshtml" />
     <Content Include="Views\User\ColumnPreferences.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\_OrdersNoDataTable.cshtml" />
     <Content Include="Views\Home\_Orders.cshtml" />
     <Content Include="Views\Order\SelectWorkgroup.cshtml" />
-    <Content Include="Views\Order\AdminOrders.cshtml" />
+    <Content Include="Views\History\AdminOrders.cshtml" />
     <Content Include="Views\CustomField\Index.cshtml" />
-    <Content Include="Views\Order\_OrdersTable.cshtml" />
+    <Content Include="Views\History\_OrdersTable.cshtml" />
     <Content Include="Views\CustomField\Create.cshtml" />
     <Content Include="Views\CustomField\_CustomFieldForm.cshtml" />
     <Content Include="Views\CustomField\Edit.cshtml" />
@@ -819,7 +819,7 @@
     <Content Include="Views\Shared\_OrderHistoryRows.cshtml" />
     <Content Include="Views\Search\Index.cshtml" />
     <Content Include="Views\Search\Results.cshtml" />
-    <Content Include="Views\Order\_OrderFilter.cshtml" />
+    <Content Include="Views\History\_OrderFilter.cshtml" />
     <Content Include="Web.Test.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -832,7 +832,7 @@
     <Content Include="Views\ServiceMessage\Index.cshtml" />
     <Content Include="Views\ServiceMessage\Create.cshtml" />
     <Content Include="Views\ServiceMessage\Edit.cshtml" />
-    <Content Include="Views\Order\_PeepsDialog.cshtml" />
+    <Content Include="Views\History\_PeepsDialog.cshtml" />
     <Content Include="Views\Order\SavedOrderRequests.cshtml" />
     <Content Include="Views\Order\_OrderSaveDialog.cshtml" />
     <Content Include="Views\Order\_ReceivedItemsHistoryDialog.cshtml" />
