tweaked the webservices to use web.config appsettings for the url and token.  also configured the deployment settings.

--- a/Purchasing.Web/Web.ReleaseCAES.config
+++ b/Purchasing.Web/Web.ReleaseCAES.config
@@ -11,6 +11,9 @@
   <!--Add analytics key for GA-->
   <appSettings>
     <add key="AnalyticsKey" value="UA-5512876-10" xdt:Transform="Replace"/>
+    <add key="AfsUrl" value="https://kfs.ucdavis.edu/kfs-prd/remoting/financialSystemRoleServiceSOAP" xdt:Transform="Replace"/>
+    <add key="AfsRoleUrl" value="https:// kfs.ucdavis.edu/kfs-prd/remoting/purchaseDocumentsInterfaceServiceSOAP" xdt:Transform="Replace"/>
+    <add key="AfsToken" value="[External]"/>
   </appSettings>
 
   <system.web>
