--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -41,7 +41,7 @@
     <errorMail from="automatedemail@caes.ucdavis.edu" to="opp-tech@ucdavis.edu" subject="ELMAH: Purchasing web error response" smtpServer="smtp.ucdavis.edu" />
   </elmah>
   <connectionStrings>
-    <add name="MainDB" connectionString="data source=vogel;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="data source=terry;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings file="AppSettings.config">
     <add key="webpages:Version" value="1.0.0.0" />
@@ -53,6 +53,9 @@
     <add key="uservoiceKey" value="[External]" />
     <add key="uservoiceSecret" value="[External]" />
     <add key="IpFilter" value="[External]"/>
+    <add key="AfsUrl" value="https://kfs-test.ucdavis.edu/kfs-stg/remoting/purchaseDocumentsInterfaceServiceSOAP"/>
+    <add key="AfsRoleUrl" value="http://kfs-test.ucdavis.edu/kfs-stg/remoting/financialSystemRoleServiceSOAP"/>
+    <add key="AfsToken" value="stage"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
