--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -855,6 +855,7 @@
     <Content Include="Web.ReleaseCAES.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <Content Include="Views\Order\DeleteSavedOrder.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
