updated to ignore ldf and mdf files

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ AppSettings.config
 Purchasing.Core/bin/Test/*.dll
 Purchasing.WS/bin/Test/*.dll
 Purchasing.WS/bin/Test/Purchasing.WS.dll.config
+
+Purchasing.Db/Sandbox/Purchasing.ldf
+Purchasing.Db/Sandbox/Purchasing.mdf
