--- a/Purchasing.Core/packages.config
+++ b/Purchasing.Core/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DataAnnotationsExtensions" version="1.0.2.0" />
+  <package id="FluentNHibernate" version="1.3.0.727" />
+  <package id="Iesi.Collections" version="3.2.0.4000" />
+  <package id="NHibernate" version="3.3.0.4000" />
+  <package id="UcdArch" version="3.3.0.76" />
 </packages>
