--- a/Purchasing.Web/packages.config
+++ b/Purchasing.Web/packages.config
@@ -1,15 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AjaxMin" version="4.47.4452.34008" />
+  <package id="AutoMapper" version="2.1.267" />
   <package id="Cassette" version="1.2.0" />
   <package id="Cassette.Views" version="1.2.0" />
   <package id="Cassette.Web" version="1.2.0" />
+  <package id="Castle.Core" version="3.0.0.4001" />
+  <package id="Castle.Windsor" version="3.0.0.4001" />
   <package id="CommonServiceLocator" version="1.0" />
   <package id="Dapper" version="1.8" />
   <package id="DataAnnotationsExtensions" version="1.0.2.0" />
   <package id="DataAnnotationsExtensions.MVC3" version="1.0.2.0" />
+  <package id="elmah" version="1.2.2" />
+  <package id="elmah.corelibrary" version="1.2.2" />
   <package id="EntityFramework" version="4.1.10331.0" />
+  <package id="FluentNHibernate" version="1.3.0.727" />
+  <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="IronRuby" version="1.1.3" />
+  <package id="iTextSharp" version="5.2.0" />
   <package id="jQuery" version="1.7.1" />
   <package id="jquery.datatables" version="1.9.0" />
   <package id="jQuery.UI.Combined" version="1.8.17" />
@@ -19,8 +27,17 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="MiniProfiler" version="1.9" />
   <package id="Modernizr" version="2.5.3" />
-  <package id="Newtonsoft.Json" version="4.0.8" />
+  <package id="Mvc3Futures" version="3.0.20105.0" />
+  <package id="MvcContrib.Mvc3.FluentHtml-ci" version="3.0.100.0" />
+  <package id="MvcContrib.Mvc3-ci" version="3.0.100.0" />
+  <package id="Newtonsoft.Json" version="4.5.5" />
+  <package id="NHibernate" version="3.3.0.4000" />
+  <package id="NHibernateProfiler" version="1.0.0.937" />
+  <package id="NPOI" version="1.2.4" />
   <package id="SassAndCoffee.Core" version="2.0.2.0" />
   <package id="SassAndCoffee.Ruby" version="2.0.2.0" />
+  <package id="UcdArch" version="3.3.0.76" />
+  <package id="UcdArch.Mvc" version="3.3.0.76" />
+  <package id="UcdArch.NHibernate" version="3.3.0.76" />
   <package id="WebActivator" version="1.5" />
 </packages>
